Add CSRF protect on form

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -237,11 +237,10 @@
 								</span>
 							{% endfor %}
 						</div>
-
-						
 					</div>
 				</div>
 			</div>
+			{{ form_widget(testimonyForm._token) }}
 			<div class="modal-footer">
 				<button type="submit" class="btn gp_button col-6 col-md-3 mx-auto">Envoyer</button>
 				{{form_end(testimonyForm)}}.
