--- a/templates/form/contactForm.html.twig
+++ b/templates/form/contactForm.html.twig
@@ -56,6 +56,7 @@
 			</div>
 		</div>
 	</div>
+	 {{ form_widget(formContact._token) }}
 	<div class=" row text-center mt-2">
 		<button type="submit" class="btn gp_button col-6 col-md-3 mx-auto">Envoyer</button>
 	</div>
